; ModuleID = '/home/carl/AnghaBench/curl/src/extr_tool_formparse.c_tool_mime_new_data.c'
source_filename = "/home/carl/AnghaBench/curl/src/extr_tool_formparse.c_tool_mime_new_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i8* }

@TOOLMIME_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_6__* (%struct.TYPE_6__*, i8*)* @tool_mime_new_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_6__* @tool_mime_new_data(%struct.TYPE_6__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i8* %1, i8** %4, align 8
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i8* @strdup(i8* %6)
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %24

10:                                               ; preds = %2
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %12 = load i32, i32* @TOOLMIME_DATA, align 4
  %13 = call %struct.TYPE_6__* @tool_mime_new(%struct.TYPE_6__* %11, i32 %12)
  store %struct.TYPE_6__* %13, %struct.TYPE_6__** %5, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %15 = icmp ne %struct.TYPE_6__* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %10
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @CONST_FREE(i8* %17)
  br label %23

19:                                               ; preds = %10
  %20 = load i8*, i8** %4, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  store i8* %20, i8** %22, align 8
  br label %23

23:                                               ; preds = %19, %16
  br label %24

24:                                               ; preds = %23, %2
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  ret %struct.TYPE_6__* %25
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local %struct.TYPE_6__* @tool_mime_new(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @CONST_FREE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
